<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:text="@string/reminder_list_late"
            android:textColor="#cc0000"
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="10dp"
            android:background="#cc0000" />

        <ListView
            android:id="@+id/lvRemindersLate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:text="@string/reminder_list_today"
            android:textColor="#0099ff"
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="10dp"
            android:background="#0099ff" />

        <ListView
            android:id="@+id/lvRemindersToday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:text="@string/reminder_list_nextdays"
            android:textColor="#bababa"
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="10dp"
            android:background="#bababa" />

        <ListView
            android:id="@+id/lvRemindersNextDays"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="7dp"
            android:gravity="center_vertical"
            android:text="@string/reminder_list_nodate"
            android:textColor="#000"
            android:textSize="4.2pt"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="10dp"
            android:background="#000" />

        <ListView
            android:id="@+id/lvRemindersNoDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="#FFFFFF"
            android:divider="#EFEFEF"
            android:dividerHeight="1.5dp" />
    </LinearLayout>

</ScrollView>